--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mongodb": "^2.2.33"
   },
   "devDependencies": {
     "request": "^2.81.0",
